design driverDashboard.html File in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
@@ -132,7 +132,37 @@
     </div>
     <!-------------------------------------------->
 </header>
-<main></main>
+<main class="container-fluid">
+    <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 160px; color:white;">
+        <div class="col-12">
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;">Driver Schedules</h1>
+            <p class="lead">You can view your Upcoming Work Schedule from here</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 mt-1" style="overflow:scroll;height:480px;overflow:auto">
+                <table class="table table-secondary mt-3">
+                    <thead class="table-dark">
+                    <tr>
+                        <th scope="col">DriverID</th>
+                        <th scope="col">RentID</th>
+                        <th scope="col">RentDate</th>
+                        <th scope="col">CarRegistrationNo</th>
+                        <th scope="col">Customer Name</th>
+                        <th scope="col">Customer Tel</th>
+                        <th scope="col">PickUpDate</th>
+                        <th scope="col">PickUpTime</th>
+                        <th scope="col">PickUpVenue</th>
+                        <th scope="col">ReturnDate</th>
+                        <th scope="col">ReturnDate</th>
+                        <th scope="col">ReturnVenue</th>
+                    </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+    </div>
+</main>
 
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
