implement add user and uplodUserimages functions in SignupCintroller.js file in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
@@ -243,6 +243,7 @@
 
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="assets/Sweet%20Alert/sweetalert.min.js"></script>
 <script>
     $(window).on('load',function (){
         $("#loaderPage").fadeOut(1000);
