--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
@@ -850,6 +850,7 @@
 
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="assets/Sweet%20Alert/sweetalert.min.js"></script>
 <script src="../controllers/luxuryCars.js"></script>
 </body>
 </html>
