add methods to webAppConfig and WebAppInitializer classest to upload files in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
@@ -157,7 +157,7 @@
                             <div id="pwHelp" class="form-text">Use 8 or more characters with a mix of letters, numbers & symbols</div>
                         </div>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <button class="btn fs-5 col-2 btn-dark me-3 mt-3" type="button">Sign Up</button>
+                                <button class="btn fs-5 col-2 btn-dark me-3 mt-3" type="button" id="btnSignUp">Sign Up</button>
                              </div>
                     </form>
                     <label class="ms-2 mt-3" style="font-family: 'Convergence', sans-serif;">Already have an
@@ -172,7 +172,7 @@
 
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
-<script src="assets/Sweet%20Alert/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
 <script src="../controllers/SignUpController.js/"></script>
 </body>
 </html>
