--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1241,7 +1241,7 @@
 
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js">
-</script><script src="assets/Sweet%20Alert/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
 <script src="../controllers/generalCars.js"></script>
 </body>
 </html>
