--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/logIn.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/logIn.html
@@ -120,7 +120,7 @@
                     <label class="fs-4 ms-2 mt-3"
                            style="font-family: 'Convergence', sans-serif; text-decoration: underline;">Login</label>
                     <form class="ms-2 mt-4 me-2">
-
+                        <input class="form-control" id="txtLogId" name="logId" type="text" hidden>
                         <div class="mb-3">
                             <label class="form-label" for="inputRole">Role</label>
                             <select aria-label="Default select example" class="form-select" id="inputRole">
@@ -143,7 +143,7 @@
                         </div>
                         <div class="row">
                             <div class="col-6 "></div>
-                            <button class="btn fs-5 col-4 btn-dark ms-4" type="button">LogIn</button>
+                            <button class="btn fs-5 col-4 btn-dark ms-4" type="button" id="btnLogIn">LogIn</button>
                         </div>
                     </form>
                     <label class="ms-2 mt-3" style="font-family: 'Convergence', sans-serif;">Don't have an
@@ -159,10 +159,7 @@
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
-<script>
-    $(window).on('load',function (){
-        $("#loaderPage").fadeOut(1000);
-    });
-</script>
+<script src="../controllers/LogInController.js"></script>
+
 </body>
 </html>
