implement login logic LoginController.js in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/logIn.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/logIn.html
@@ -124,9 +124,10 @@
                         <div class="mb-3">
                             <label class="form-label" for="inputRole">Role</label>
                             <select aria-label="Default select example" class="form-select" id="inputRole">
-                                <option value="1">Admin</option>
+                                <option value="1" selected>Select Your Role</option>
+                                <option value="2">Admin</option>
                                 <option value="2">User</option>
-                                <option value="3">Driver</option>
+                                <option value="4">Driver</option>
                             </select>
                         </div>
                         <div class="mb-3">
@@ -139,7 +140,7 @@
                         </div>
                         <div class="mb-3 form-check">
                             <input class="form-check-input" id="check" type="checkbox">
-                            <label class="form-check-label" for="check">Show Password</label>
+                            <label class="form-check-label" for="check" id="showPW">Show Password</label>
                         </div>
                         <div class="row">
                             <div class="col-6 "></div>
