add driverDashboardController.js file and link it to driverDashboard.html file  in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/driverDashboard.html
@@ -244,10 +244,6 @@
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.37/dist/sweetalert2.all.min.js"></script>
-<script>
-    $(window).on('load',function (){
-        $("#loaderPage").fadeOut(1000);
-    });
-</script>
+<script src="../controllers/DriverDashboarController.js"></script>
 </body>
 </html>
