--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
@@ -134,8 +134,8 @@
     <div class="row me-3" style="width: 300px">
       <div class="col-8 ">
         <label class="col-5"></label>
-          <label class="col-6 text-end" id="UserID">U001</label>
-          <label class="col-12 text-end" id="UserName">Hansika Perera</label>
+          <label class="col-6 text-end" id="UserID"></label>
+          <label class="col-12 text-end" id="UserName"></label>
       </div>
       <button class="navbar-toggler d-inline-block align-text-top align-items-end col-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
         <img src="../assests/images/profile-user.png" width="50px" height="50px">
